# capstone-unlovable

./: .gitignore  README.md  globals.py  main.py  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
graphs/: commons.py  planner.py  self_heal.py  task.py  tools.py
lib/: landing.py  project.py  server.py
tauri/: package-lock.json  package.json  vite.config.ts
tauri/src/: App.tsx
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/src/: lib.rs
